[gd_scene load_steps=9 format=3 uid="uid://0qmp0h786iwm"]

[ext_resource type="Script" uid="uid://bu83mmuls6yp6" path="res://Components/movement_component.gd" id="1_3el03"]
[ext_resource type="Script" uid="uid://biohw8s55yt5y" path="res://TileObjects/player_three.gd" id="1_doqtg"]
[ext_resource type="Script" uid="uid://n7b3t6dajop4" path="res://Components/health_component.gd" id="2_rs0nn"]
[ext_resource type="Script" uid="uid://bhh7v05qnluna" path="res://Components/team_component.gd" id="4_73fou"]
[ext_resource type="Script" uid="uid://dgmrbc8k0s6ax" path="res://Components/player_controls_component.gd" id="5_duf1m"]
[ext_resource type="Script" uid="uid://cy71jjp5d2opr" path="res://Deck/deck.gd" id="6_molbd"]
[ext_resource type="Script" uid="uid://orjp73y7x1v1" path="res://Deck/hand_display.gd" id="7_0mhgk"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8b1bd"]
size = Vector2(16, 16)

[node name="PlayerThree" type="Node2D" node_paths=PackedStringArray("movement_component", "team_component")]
script = ExtResource("1_doqtg")
movement_component = NodePath("MovementComponent")
team_component = NodePath("TeamComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_8b1bd")
centered = false

[node name="Center" type="Node2D" parent="Sprite2D"]
position = Vector2(8, 8)

[node name="MovementComponent" type="Node2D" parent="." node_paths=PackedStringArray("base_node")]
script = ExtResource("1_3el03")
base_node = NodePath("..")
metadata/_custom_type_script = "uid://bu83mmuls6yp6"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_rs0nn")
health = 10
metadata/_custom_type_script = "uid://n7b3t6dajop4"

[node name="TeamComponent" type="Node" parent="."]
script = ExtResource("4_73fou")
team = 1
metadata/_custom_type_script = "uid://bhh7v05qnluna"

[node name="PlayerControlsComponent" type="Node2D" parent="." node_paths=PackedStringArray("movement")]
script = ExtResource("5_duf1m")
movement = NodePath("../MovementComponent")
metadata/_custom_type_script = "uid://dgmrbc8k0s6ax"

[node name="Deck" type="Node" parent="." node_paths=PackedStringArray("tile_object")]
script = ExtResource("6_molbd")
tile_object = NodePath("..")
metadata/_custom_type_script = "uid://cy71jjp5d2opr"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HandDisplay" type="HBoxContainer" parent="CanvasLayer/CenterContainer" node_paths=PackedStringArray("deck")]
layout_mode = 2
script = ExtResource("7_0mhgk")
deck = NodePath("../../../Deck")
metadata/_custom_type_script = "uid://orjp73y7x1v1"

[connection signal="action_added" from="Deck" to="CanvasLayer/CenterContainer/HandDisplay" method="_on_deck_action_added"]
[connection signal="action_played" from="Deck" to="CanvasLayer/CenterContainer/HandDisplay" method="_on_deck_action_played"]
[connection signal="action_removed" from="Deck" to="CanvasLayer/CenterContainer/HandDisplay" method="_on_deck_action_removed"]
